--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-POSTGRES_HOST=localhost
-POSTGRES_PORT=5431
-POSTGRES_USER=user
-POSTGRES_PASSWORD=passw0rd
-POSTGRES_POOL=10
-POSTGRES_DBNAME=managing_tasks_development
+POSTGRES_NAME=postgres
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=password
+POSTGRES_HOST=database
+
