--- a/config/database.yml
+++ b/config/database.yml
@@ -17,16 +17,16 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  host: localhost
-  port: 5431
-  pool: <%= ENV.fetch("POSTGRES_POOL") { 5 } %>
-  username: user
-  password: passw0rd
-  prepared_statements: <%= (ENV.fetch("POSTGRES_PREPARED_STATEMENTS") { 'false' }) == 'true' ? true : false %>
+  database: <%= ENV['POSTGRES_NAME'] %>
+  username: <%= ENV['POSTGRES_USER'] %>
+  password: <%= ENV['POSTGRES_PASSWORD'] %>
+  port: <%= ENV['POSTGRES_PORT'] || '5432' %>
+  host: <%= ENV['POSTGRES_HOST'] %>
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  timeout: 5000
 
 development:
   <<: *default
-  database: managing_tasks_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -59,8 +59,8 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
+  database: tasks_test
   <<: *default
-  database: managing_tasks_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -83,6 +83,3 @@ test:
 #
 production:
   <<: *default
-  database: managing_tasks_production
-  username: managing_tasks
-  password: <%= ENV['MANAGING_TASKS_DATABASE_PASSWORD'] %>
